syntax = "proto3";
package dhpc.request;

option go_package = "github.com/DhpcChain/Dhpc/x/request/types";

message MinerResponse {
  string uUID = 1; 
  string requestUUID = 2; 
  string hash = 3; 
  int32 answer = 4; 
  string creator = 5;
  string dataUsed = 6;
  int32 salt = 7;
}

